syntax = "proto2";

package im.actor.server.office;

option (scalapb.options) = {
    import: "im.actor.server.api.TypeMappers._"
    import: "scala.collection.JavaConversions._"
};

import "scalapb/scalapb.proto";

message UserEnvelope {
    required int32 user_id = 1;

    oneof payload {
        ChangeName change_name = 2;
        EditLocalName edit_local_name = 3;
        SendMessage send_message = 4;
        MessageReceived message_received = 5;
        MessageRead message_read = 6;
        Auth auth = 7;
    }

    message Auth {
        required int64 auth_id = 1;
    }

    message ChangeName {
        required string name = 1;
    }

    message EditLocalName {
        required int32 user_id = 1;
        required int64 access_hash = 2;
        required string name = 3;
    }

    message SendMessage {
        required int32 sender_user_id = 1;
        required int64 sender_auth_id = 2;
        required int64 random_id = 3;
        required int64 date = 4;
        required bytes message = 5 [(scalapb.field).type = "im.actor.api.rpc.messaging.Message"];
        required bool is_fat = 6;
    }

    message MessageReceived {
        required int32 receiver_user_id = 1;
        required int64 receiver_auth_id = 2;
        required int64 date = 3;
        required int64 received_date = 4;
    }

    message MessageRead {
        required int32 receiver_user_id = 1;
        required int64 receiver_auth_id = 2;
        required int64 date = 3;
        required int64 read_date = 4;
    }
}
